Mon Dec 21 15:13:57 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/EC_Mcast/run_test.pl:
        * performance-tests/Throughput/run_test.pl:
        * tests/AMI_Buffering/run_timeout.pl:
        * tests/AMI_Buffering/run_message_count.pl:
        * tests/AMI_Buffering/run_buffer_size.pl:
        * tests/AMI_Buffering/run_timeout_reactive.pl:
        * tests/AMI_Buffering/run_test.pl:
        * tests/CodeSets/simple/run_test.pl:
        * tests/Oneway_Buffering/run_timeout.pl:
        * tests/Oneway_Buffering/run_message_count.pl:
        * tests/Oneway_Buffering/run_buffer_size.pl:
        * tests/Oneway_Buffering/run_timeout_reactive.pl:
        * tests/Oneway_Buffering/run_test.pl:

          Tests are converted to use new test framework
          and added to fuzz build.

Mon Dec 21 13:09:35 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * DevGuideExamples/Multithreading/ThreadPerConnection/MessengerServer.cpp:
        * tests/Oneway_Send_Timeouts/run_test.pl:
        * tests/Optimized_Connection/run_test.pl:
        * examples/Simple/time-date/svc.conf:
        * examples/Simple/time-date/run_test.pl:

          Tests are converted to use new test framework
          and added to fuzz build.

Mon Dec 21 12:39:29 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:
        * tao/ORB_Core.cpp:
          Fixed bug#3790 and marked corresponding test as fixed in lst.
          Now when object is reinitialized and it's not collocated then
          it's explicitly marked as remote one.

Sun Dec 20 15:57:15 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * TAO_IDL/be/be_template_module_ref.cpp:
          Removed a stray charachter that was causing a compile time error.

Sat Dec 19 06:59:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp
        * TAO_IDL/be_include/be_interface.h
          Merged changes back in that I reverted by accident
